--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="redux.js"></script>
+    <script src="bundle.js"></script>
 </head>
 <body>  
-    <div id="root">React fails</div>
+    <div id="content">React fails</div>
 </body>
 </html>
